# API-practice

./: app.py  llama.py  llama_prompt.txt  main.py  pyproject.toml  users.db
app_/: auth.py  database.py  models.py
